Fix decompiler compile errors
Reconstruct JD-Core decompilation artifacts across the source tree so the
project compiles cleanly under javac --release 8:

- Replace sun.misc.BASE64Encoder/Decoder with java.util.Base64 in the
  handshake parsers.
- Reconstruct scrambled string-switches (BaseItem item-type mapping,
  Interactor.GetInteractorType, AddSpamWallPostIt parsers) that the
  decompiler emitted as dead code after invalid forward-label breaks.
- Fix hoisted/duplicate declarations and mangled labelled loops left by
  JD-Core (RoomTask, SnowArenaRun, PollContentsMessageComposer,
  HabboSearchParser, GiftWrappingConfigurationComposer, Avatar,
  RoomTextSearchParser, CloseIssuesParser, FurniHasSelectedUser, etc.).
- Reconstruct SnowStageStarting, which JD-Core failed to decompile
  (broadcast StageStartingComposer), using the Orion-Emulator source as a
  reference for the stage task structure.
- Add the enclosing-class imports that Java requires alongside nested-type
  imports (Interactor, BaseItem, Catalog, RoomFloorItemData, etc.).
- Parameterize the Netty 5 ChannelInitializer and fix raw-type assignments.
- Add the missing return in RoomManager.loadModel's catch path.